--- a/youro/src/styles/Doctor-ui/Doctorhomepage.css
+++ b/youro/src/styles/Doctor-ui/Doctorhomepage.css
@@ -44,36 +44,18 @@
   height: 100vh; */
   /* display: flex; */
   /* flex-grow: 0.5; */
-  flex: 1;
+  /* flex: 1; */
   background-color: white;
-  border-radius: 15px;
+  border-radius: 2%;
   padding: 1rem;
-}
-.care-plan-details-1
-{
-  background-color: white;
-  border-radius: 15px;
-  padding: 10px;
-  margin-top: 10px ;
-  margin-right: 15px;
+  width: 40%;
+  margin: 2%;
+  overflow-y: scroll;
+  scroll-behavior: initial;
 }
 
-.column-data
+/* .list-view
 {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  flex: 1.2;
-  /* flex-grow: 1; */
-  width: 80%;
-  margin: 1.5%;
-  /* width: 50rem;
-  height: 60rem; */
-}
+  border: 1px solid black;
+} */
 
-.row-data 
-{
-  display: flex; 
-  flex-direction: row; 
-  flex: 1;
-}
