patient-ui-flexible&apis

--- a/youro/src/styles/Patient-ui/Patient-home.css
+++ b/youro/src/styles/Patient-ui/Patient-home.css
@@ -43,3 +43,12 @@ body
   /* margin-left: 2px;
   margin-right: 2px; */
 }
+
+
+.patient-div
+{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: flex-start;
+}
