--- a/youro/src/styles/Patient-ui/Patient-Homepage.css
+++ b/youro/src/styles/Patient-ui/Patient-Homepage.css
@@ -33,10 +33,11 @@
    flex-direction: row;
    height: 100vh;
    width: 100%;
+   margin: 0px 10px;
    /* border: 1px solid black; */
 }
 
-.care-plan-details 
+.care-plan-details-patient
 {
   /* display: flex; */
   /* flex-direction: column; */
@@ -45,35 +46,87 @@
   /* display: flex; */
   /* flex-grow: 0.5; */
   flex: 1;
+  width: 50%;
+  height: 85vh;
   background-color: white;
   border-radius: 15px;
+  align-items: center;
+  justify-content: center;
   padding: 1rem;
+  overflow-y: scroll;
+  margin: 0% 3%;
 }
-.care-plan-details-1
+
+.care-plan-details-patient-1
+{
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* width: 50%;
+  height: 100vh; */
+  /* display: flex; */
+  /* flex-grow: 0.5; */
+  /* flex: 1; */
+  background-color: white;
+  border-radius: 15px;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  overflow-y: scroll;
+  margin-top: 5%;
+  margin-bottom: 3%;
+  margin-right: 2%;
+  height: 58vh;
+}
+/* .care-plan-details-1
 {
   background-color: white;
   border-radius: 15px;
   padding: 10px;
   margin-top: 10px ;
   margin-right: 15px;
-}
+} */
 
 .column-data
 {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   display: flex;
   flex-direction: column;
-  flex: 1.2;
+  /* flex: 1.5; */
+  width: 50%;
   /* flex-grow: 1; */
-  width: 80%;
-  margin: 1.5%;
+  /* width: 80%; */
   /* width: 50rem;
   height: 60rem; */
 }
 
 .row-data 
 {
-  display: flex; 
+  display: flex;
   flex-direction: row; 
   flex: 1;
+  margin-right: 4%;
+}
+
+
+.loader-container
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
