--- a/youro/src/styles/Patient-ui/Patient-Homepage.css
+++ b/youro/src/styles/Patient-ui/Patient-Homepage.css
@@ -5,7 +5,7 @@
 {
   display: flex;
   width: 100%;
-  height: 100vh;
+  overflow-x: hidden;
 }
 .sidebar
 {
@@ -31,7 +31,6 @@
 {
    display: flex;
    flex-direction: row;
-   height: 100vh;
    width: 100%;
    margin: 0px 10px;
    /* border: 1px solid black; */
@@ -45,15 +44,15 @@
   height: 100vh; */
   /* display: flex; */
   /* flex-grow: 0.5; */
-  flex: 1;
-  width: 50%;
-  height: 85vh;
+  /* flex: 1; */
+  width: 40%;
+  height: 80vh;
   background-color: white;
   border-radius: 15px;
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  overflow-y: scroll;
+  overflow: auto;
   margin: 0% 3%;
 }
 
@@ -71,11 +70,12 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  overflow-y: scroll;
   margin-top: 5%;
   margin-bottom: 3%;
   margin-right: 2%;
-  height: 58vh;
+  height: 47vh;
+  width: 47%;
+  overflow-y: auto;
 }
 /* .care-plan-details-1
 {
@@ -92,7 +92,8 @@
   display: flex;
   flex-direction: column;
   /* flex: 1.5; */
-  width: 50%;
+  width: 60%;
+  margin-right: 5%;
   /* flex-grow: 1; */
   /* width: 80%; */
   /* width: 50rem;
@@ -103,8 +104,7 @@
 {
   display: flex;
   flex-direction: row; 
-  flex: 1;
-  margin-right: 4%;
+  justify-content: space-between;
 }
 
 
@@ -112,7 +112,6 @@
 {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   height: 100vh;
 }
@@ -124,6 +123,10 @@
   width: 50px;
   height: 50px;
   animation: spin 2s linear infinite;
+}
+
+.previous-appointment ul {
+  padding: unset;
 }
 
 @keyframes spin {
