--- a/youro/src/styles/Patient-ui/Patient-home.css
+++ b/youro/src/styles/Patient-ui/Patient-home.css
@@ -25,9 +25,9 @@ body
   
    /* display: flex; */
    /* height: ; */
-   height: 100vh;
+   height: 95vh;
    overflow-y: auto;
-   display: flex;
+   /* display: flex; */
    flex-direction: column;
   /* font-size: 50rem; */
   /* color: var(--secondary-color); */
@@ -38,10 +38,15 @@ body
 .Menu-item
 {
   font-size: large;
-  margin-top: 10%; 
-  margin-bottom: 10%;
+  margin-top: 30px; 
+  margin-bottom: 30px;
+  color: white;
   /* margin-left: 2px;
   margin-right: 2px; */
+}
+
+.Menu-item:hover {
+  background-color: var(--primary-color);
 }
 
 
