--- a/youro/src/styles/Patient-ui/Patient-Homepage.css
+++ b/youro/src/styles/Patient-ui/Patient-Homepage.css
@@ -1,11 +1,21 @@
 @import "../../App.css";
 
 
+
 .hm
 {
   display: flex;
   width: 100%;
   height: 100vh;
+}
+
+.header
+{
+   display: flex;
+   justify-content: space-between;
+   flex-direction: column;
+   /* border: 1px solid black; */
+   margin: 10px;
 }
 .sidebar
 {
@@ -45,7 +55,7 @@
   height: 100vh; */
   /* display: flex; */
   /* flex-grow: 0.5; */
-  flex: 1;
+  /* flex: 1; */
   width: 50%;
   height: 85vh;
   background-color: white;
