--- a/youro/src/styles/Home.css
+++ b/youro/src/styles/Home.css
@@ -83,7 +83,7 @@
 }
 
 .scroll-words header {
-    height: 1.5em;
+    height: 2em;
     overflow: hidden;
     width: 100%;
     font-weight: 700;
@@ -99,10 +99,11 @@
   
 .scroll-words li {
     list-style-type: none;
+    font-weight: 700;
     margin: 0px 0 1px 0;
     /* height: 1em !important; */
     padding: 0px 0 0px 0;
-    font-size: 1.5em;
+    font-size: 2em;
     text-transform: uppercase;
     width: 100%;
   }
