--- a/youro/src/styles/Patient-ui/Patient-Homepage.css
+++ b/youro/src/styles/Patient-ui/Patient-Homepage.css
@@ -11,11 +11,15 @@
 
 .header
 {
-   display: flex;
-   justify-content: space-between;
+   /* display: flex;
+   align-items:end;
+   justify-content: flex-end;
    flex-direction: column;
    /* border: 1px solid black; */
-   margin-left: 20px;
+   /* margin-left: 20px; */
+   display: flex;
+   justify-content: flex-end; 
+   align-items: center; 
 }
 .sidebar
 {
