--- a/youro/src/styles/Doctor-ui/Doctor-Profile.css
+++ b/youro/src/styles/Doctor-ui/Doctor-Profile.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   height: 85vh;
   /* margin-top: 5%; */
   width: 95%;
@@ -60,19 +60,62 @@
   margin: 5px;
 }
 
+.pic1
+{
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 10%;
+}
 .pic
 {
-  height: 120px;
-  width: 120px;
+  /* height: 100px;
+  width: 100px; */
   border-radius: 10px;
-  border: 2px solid black;
   background-color: aliceblue;
 }
 
-.edit-info
+/* .edit-info
 {
-  margin-left: 25rem;
+  /* margin-left: 25rem; */
+
+
+.password-input
+{
+  width: 200%;
+  padding: 10px;
+  border: 0.2px solid black;
+  border-radius: 2px;
+  background-color: #D9D9D9;
+  
 }
 
+
+/* .my-profile {
+  display: flex;
+  align-items: center;
+} */
+
+.edit-info { /* Expand the "Edit Info" section to fill the available space */
+  display: flex;
+  align-self: flex-end;
+  justify-content: space-between; 
+  align-items: center;
+  padding-left: 70px; 
+  /* margin-left: 40%; */
+  /* width: 100%;
+  margin-left: 50%;  */
+}
+
+
+.my-profile
+{
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid black; */
+  margin-left: 10%;
+}
 
 
