--- a/youro/src/index.css
+++ b/youro/src/index.css
@@ -1,3 +1,13 @@
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+html, body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: 'Comfortaa', 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +16,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 code {
