--- a/youro/src/styles/Doctor-ui/Doctor-Profile.css
+++ b/youro/src/styles/Doctor-ui/Doctor-Profile.css
@@ -86,9 +86,10 @@
 {
   width: 200%;
   padding: 10px;
-  /* border: 0.2px solid black; */
-  border-radius: 2px;
-  background-color: #D9D9D9;
+  border: 0.5px solid gray;
+  border-radius: 5px;
+  /* border: none; */
+  /* background-color: #D9D9D9; */ 
   
 }
 
@@ -114,8 +115,66 @@
 {
   display: flex;
   flex-direction: column;
+  margin-bottom: 3%;
   /* border: 1px solid black; */
-  margin-left: 10%;
 }
 
 
+
+.cancel-button{
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 15px;
+  border-width: 5;
+  text-align: center;
+  transition: all .2s ease-in;
+  cursor: pointer;
+  padding: 15px 25px;
+}
+
+.cancel-button:hover {
+  background-color: gray;
+  color: white;
+  border: 1px solid #404040 !important;
+  box-shadow: var(--shadow);
+}
+
+.p-buttons-col
+{
+  width: 30%;
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 2%;
+}
+/* .p-buttons-col .cancel-button
+{
+  align-self: flex-end;
+} */
+
+.popup-container {
+  position: absolute;
+  /* background-color: #fff;
+  border: 1px solid #ccc; */
+  padding: 16px;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+}
+
+.popup-content {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  align-items: center;
+}
+.popup-button
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+ 
