--- a/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
+++ b/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
@@ -12,7 +12,10 @@
 {
   margin: 5%;
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  justify-content: space-between;
+  flex-direction: row;
+  /* border: 1px solid black; */
   /* height: 30vh; */
   /* align-items: center;
   
@@ -28,23 +31,63 @@
 
 .d-calender-form
 { 
-  display: flex;
+   width: 100%;
+  /* display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  
+  border: 1px solid black;
+  justify-content: space-evenly */
 }
 
 .event-details-container
 {
   align-items: center;
   padding: 2%;
-  width: 50%;
+  /* border: 1px solid black; */
+  width: 30%;
 }
 
+.event-details
+{
+  text-align: center;
+  background-color: white;
+  padding: 2%;
+  border-radius: 20px;
+}
 .events-form
 {
   margin-left: 3%;
+  /* background-color: white; */
 }
 
+.event-creation-form
+{
+  margin: 3% 0%;
+  /* background-color: white; */
+  display: flex;
+  flex-direction: column;
+}
+
+.add-availability
+{
+  background-color: var(--secondary-color);
+  border: none;
+  border-radius: 15px;
+  border-width: 5;
+  text-align: center;
+  transition: all .2s ease-in;
+  cursor: pointer;
+  padding: 15px 25px;
+  margin: 2%;
+}
+.available-input
+{
+  width: 90%;
+  padding: 2%;
+  border: none;
+  height: 40%;
+  margin: 1%;
+}
 
 /* DoctorAppointments.css */
 
