--- a/youro/src/styles/Doctor-ui/Searchbar.css
+++ b/youro/src/styles/Doctor-ui/Searchbar.css
@@ -7,16 +7,23 @@
 }
 .search-input
 {
-  align-self: flex-end; 
-  margin-bottom: 1%;
-  margin-right: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0.5% 2%;
+  /* border: 1px solid black; */
+  /* margin-bottom: 1%;
+  margin-right: 5%; */
 } 
+
 
 .search-input-field {
   align-self: flex-end;
   border: 2px solid #ccc; 
   padding: 10px; 
   border-radius: 18px;
+  width: 25%;
+  /* margin: 1% 1%; */
   /* width: 100%;  */
 }
 .patient-details
@@ -63,4 +70,9 @@
   /* border: 2px solid blue; */
   margin-left: 2%;
   height: 75vh;
+}
+
+.back-button
+{
+  margin-left: 1%;
 }
