--- a/youro/src/styles/Doctor-ui/Doctor-Profile.css
+++ b/youro/src/styles/Doctor-ui/Doctor-Profile.css
@@ -147,7 +147,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 2%;
 }
 /* .p-buttons-col .cancel-button
@@ -155,19 +155,48 @@
   align-self: flex-end;
 } */
 
-.popup-container {
+/* .popup-container {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
   position: absolute;
   /* background-color: #fff;
   border: 1px solid #ccc; */
-  padding: 16px;
+  /* padding: 16px;
   text-align: center;
   top: 50%;
-  left: 50%;
+  left: 50%; */
+/* }  */
+.popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; /* Adjust the z-index as needed */
 }
+
+.popup-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the transparency here */
+  z-index: -1; /* Ensure it's behind the content */
+}
+
 
 .popup-content {
   display: flex;
+  width: 40%;
   flex-direction: column;
+  padding: 2%;
+  border-radius: 20px;
+  height: 10vh;
   background-color: white;
   align-items: center;
 }
@@ -176,5 +205,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 40%;
+  /* border: 1px solid black; */
 }
  
