--- a/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
+++ b/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
@@ -6,6 +6,7 @@
 {
   display: flex;
   flex-direction: row;
+  height: 80vh;
 }
 
 .d-calender
@@ -31,7 +32,7 @@
 
 .d-calender-form
 { 
-   width: 100%;
+   width: 70%;
   /* display: flex;
   flex-direction: row;
   
@@ -62,7 +63,8 @@
 
 .event-creation-form
 {
-  margin: 3% 0%;
+  /* margin: 3% 0%; */
+  margin-top: 2%;
   /* background-color: white; */
   display: flex;
   flex-direction: column;
