--- a/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
+++ b/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
@@ -23,16 +23,18 @@
   justify-content: center; */
 }
 
-.event-creation-form
+/* .event-creation-form
 {
   width: 40%;
   padding: 3%;
-  /* background-color: white; */
+  /* background-color: white;
 }
+ */
+
 
 .d-calender-form
 { 
-   width: 70%;
+   width: 98%;
   /* display: flex;
   flex-direction: row;
   
@@ -57,25 +59,66 @@
 }
 .events-form
 {
-  margin-left: 3%;
+  margin-left: 1%;
+  /* top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;  */
   /* background-color: white; */
 }
 
 .event-creation-form
 {
+  
   /* margin: 3% 0%; */
-  margin-top: 2%;
+  margin-top: 1%;
   /* background-color: white; */
+  align-items: center;
+  justify-content: center;
   display: flex;
   flex-direction: column;
+  border: 1px solid black;
+  background-color: white;
+  width: 20%;
+  padding: 4%;
+  height: 18vh;
+}
+
+.events-form-1
+{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; 
+}
+.event-bg
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: -1; 
 }
 
 .add-availability
 {
   background-color: var(--secondary-color);
   border: none;
+  color: white;
   border-radius: 15px;
   border-width: 5;
+  font-size: 16px;
   text-align: center;
   transition: all .2s ease-in;
   cursor: pointer;
@@ -93,5 +136,68 @@
 
 /* DoctorAppointments.css */
 
+.popup-container-apt {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; 
+}
+
+.popup-background-apt {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: -1; 
+}
+
+.remove-button {
+  background-color: var(--secondary-color);
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 10px;
+}
+
+.hide-button 
+{
+  background-color: var(--secondary-color);
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 10px; 
+}
+
+.slot-buttons
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+/* .remove-button:hover {
+  background-color: grey;
+} */
+
+.current-month {
+  /* background-color: ; */
+  /* font-weight: bold;
+  text-align: center;
+  padding: 10px; */
+  /* text-align: center; */
+  font-weight: bold;
+}
 
 
+
+/* Month View */
