--- a/youro/src/App.css
+++ b/youro/src/App.css
@@ -33,6 +33,7 @@
   transition: all .2s ease-in;
   cursor: pointer;
   padding: 15px 25px;
+  border: 1px solid transparent !important;
 }
 
 .btn-filled-disabled {
@@ -105,6 +106,17 @@
 .css-1wvake5{
   border: none !important;
 }
+
+.profile-pic {
+  border-radius: 10px;
+  cursor: pointer;
+  margin-bottom: 50px;
+}
+
+.rbc-btn-group:last-child{
+  display: none;
+}
+
 
 input[type='radio']:after {
   width: 15px;
