--- a/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-patient-data.css
+++ b/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-patient-data.css
@@ -84,6 +84,18 @@
   scroll-behavior: initial;
 }
 
+.admin-details-view
+{
+  background-color: white;
+  padding: 1rem;
+  width: 30%;
+  height: 80vh;
+  margin: 15px;
+  border-radius: 20px;
+  overflow-y: auto;
+  scroll-behavior: initial;
+}
+
 .floating-editor
 {
    /* position: absolute; */
