--- a/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
+++ b/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
@@ -82,10 +82,11 @@
   display: flex;
   flex-direction: column;
   border: 1px solid black;
+  border-radius: 20px;
   background-color: white;
   width: 20%;
   padding: 4%;
-  height: 18vh;
+  height: 20vh;
 }
 
 .events-form-1
