all youro title and name in admin,patient,doctor  and forgot password ui

--- a/youro/src/styles/Patient-ui/Patient-home.css
+++ b/youro/src/styles/Patient-ui/Patient-home.css
@@ -67,7 +67,7 @@ body
 }
 
 .educate-container {
-  margin-left: 50px;
+  margin-left: 40px;
   width: 100%;
 }
 
@@ -116,10 +116,11 @@ body
 }
 
 .chat-container-main {
-  width: 100%;
+  width: 92%;
   padding: 50px;
   background-color: white;
   display: flex;
+   height: 60vh;
 }
 
 .select-names {
