--- a/youro/src/styles/login.css
+++ b/youro/src/styles/login.css
@@ -113,7 +113,7 @@ body
 .Login-Form-Container {
     width: 30%;
     margin: 0px auto;
-    background-color: #D9D9D9;
+    background-color: #e5dfd1;
     padding: 20px;
     border-radius: 20px;
 }
