--- a/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
+++ b/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-Appointment-page.css
@@ -11,11 +11,11 @@
 
 .d-calender
 {
-  margin: 5%;
+  /* margin: %; */
   display: flex;
   width: 100%;
   justify-content: space-between;
-  flex-direction: row;
+  flex-direction: column;
   /* border: 1px solid black; */
   /* height: 30vh; */
   /* align-items: center;
@@ -34,7 +34,8 @@
 
 .d-calender-form
 { 
-   width: 98%;
+   width: 95%;
+   margin-left: 2%;
   /* display: flex;
   flex-direction: row;
   
