--- a/youro/src/styles/Doctor-ui/Doctorhomepage.css
+++ b/youro/src/styles/Doctor-ui/Doctorhomepage.css
@@ -14,10 +14,11 @@
 {
    /* margin-left:15px;
    margin-top: 40px; */
+   /* margin-top: 1%; */
    display: flex;
    width: 100%;
    flex-direction: column;
-   align-items: flex-start;
+   /* align-items: flex-start; */
  }
 .care-plan-doctor h1
 {
