--- a/youro/src/styles/Doctor-ui/Doctor-Profile.css
+++ b/youro/src/styles/Doctor-ui/Doctor-Profile.css
@@ -147,7 +147,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 2%;
 }
 /* .p-buttons-col .cancel-button
