--- a/youro/src/App.css
+++ b/youro/src/App.css
@@ -78,7 +78,7 @@
 
 .btn-neon {
   background-color: var(--neon-color);
-  color: white;
+  color: black;
   border-radius: 15px;
   text-align: center;
   transition: all .2s ease-out;
