--- a/youro/src/App.css
+++ b/youro/src/App.css
@@ -76,6 +76,22 @@
   box-shadow: var(--shadow);
 }
 
+.btn-outlined-selected {
+  background-color: var(--secondary-color);
+  color: white;
+  border: none;
+  box-shadow: var(--shadow);
+  font-weight: 700;
+  border: 1px solid #404040 !important;
+  border-radius: 15px;
+  border-width: 5;
+  text-align: center;
+  transition: all .2s ease-in;
+  cursor: pointer;
+  padding: 15px 25px;
+  width: fit-content;
+}
+
 .btn-neon {
   background-color: var(--neon-color);
   color: black;
