admin- doctor view profile api integrated

--- a/youro/src/styles/Admin-ui/Admin-PopUps.css
+++ b/youro/src/styles/Admin-ui/Admin-PopUps.css
@@ -33,5 +33,15 @@
     text-align: start;
   }
   
+  
+
+.delete-doctor-button{
+  &:hover{
+    transform: scale(1.2);
+    transition-duration: 0.3s;
+  }
+}
+
+
   /* Add any additional styles you need */
   
