--- a/youro/src/styles/Admin-ui/Admin-DoctorsList.css
+++ b/youro/src/styles/Admin-ui/Admin-DoctorsList.css
@@ -94,4 +94,11 @@
 .view-more-class{
   color: var(--secondary-color);
   font-weight: bold;
+  border: none;
+  cursor: pointer;
+  &:hover{
+    transform: scale(1.1);
+    transition-duration: 0.3s;
+  }
+  
 }
