--- a/youro/src/styles/Patient-ui/Patient-home.css
+++ b/youro/src/styles/Patient-ui/Patient-home.css
@@ -55,8 +55,10 @@ body
 
 .Menu-item:hover {
   background-color: #777;
+  
+  transform: scale(1.1);
+  transition-duration: 0.3s;
 }
-
 
 .patient-div
 {
