--- a/youro/src/styles/Youro-header.css
+++ b/youro/src/styles/Youro-header.css
@@ -16,6 +16,7 @@ h1
   /* border: 1px solid black; */
   width: 95%;
   margin: 0.5%; 
+  align-items: baseline;
   /* border: 1px solid black; */
   /* height: 2vh; */
 }
@@ -53,17 +54,49 @@ h4
 .user-name
 {
   text-align: center;
-  max-width: 10%;
+  max-width: 50%;
   overflow: hidden;
-  display: inline-block;
+  display: flex;
   text-overflow: ellipsis;
   white-space: nowrap; 
   /* border: 1px solid black; */
   height: 7vh;
   /* border: 1px solid black; */
   /* padding: 2%; */
-  margin-top: 1%;
-  /* background-color: var(--secondary-color); */
+  /* margin-top: 1%; */
+
+  padding: 0;
+  margin: 0;
+  filter: drop-shadow(rgba(149, 149, 149, 0.837) 3px 5px 2px);
+  &:hover{
+    transform: scale(1.01);
+    transition-duration: 0.3s;
+    /* filter: drop-shadow(rgba(149, 149, 149, 0.837) 1rem 1rem 10px); */
+  }
+}
+
+.profile-pic{
+  padding: 0;
+  min-width: 30px;
+  min-height: 30px;
+  object-fit: contain;
+}
+
+.profle-bubtton-h4{
+  margin: 0;
+  padding: 0;
+}
+
+.options-button-1 {
+  /* width: 80%; */
+  max-height: 7vh;
+  min-height: 50%;
+  background-color: rgb(232 228 215);
+  font-size: large;
+  font-weight: bold;
+  border: 1px solid;
+  border-radius: 5px;
+  
 }
 /* .span
 {
