--- a/youro/src/styles/Youro-header.css
+++ b/youro/src/styles/Youro-header.css
@@ -67,7 +67,7 @@ h4
 
   padding: 0;
   margin: 0;
-  filter: drop-shadow(rgba(149, 149, 149, 0.837) 3px 5px 2px);
+  /* filter: drop-shadow(rgba(149, 149, 149, 0.837) 3px 5px 2px); */
   &:hover{
     transform: scale(1.01);
     transition-duration: 0.3s;
@@ -89,14 +89,16 @@ h4
 
 .options-button-1 {
   /* width: 80%; */
+  margin-top: 1.5%;
+  margin-left: 0.5%;
   max-height: 7vh;
   min-height: 50%;
   background-color: rgb(232 228 215);
   font-size: large;
   font-weight: bold;
-  border: 1px solid;
+  /* border: 1px solid; */
   border-radius: 5px;
-  
+  cursor: pointer;
 }
 /* .span
 {
