--- a/youro/src/index.css
+++ b/youro/src/index.css
@@ -105,6 +105,29 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+  /* scroll bar changes */
+  --sb-track-color: #dcdcdc;
+  --sb-thumb-color: #636363;
+  --sb-size: 12px;
+
+  scrollbar-color: var(--sb-thumb-color) 
+                   var(--sb-track-color);
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size) 
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 5px;
+  border: 1px solid #a3b1b7;
 }
 
 code {
