--- a/youro/src/styles/Doctor-ui/Doctor-appointment/DA-orders.css
+++ b/youro/src/styles/Doctor-ui/Doctor-appointment/DA-orders.css
@@ -5,14 +5,14 @@
 
 .order-div
 {
-  height: 60vh;
-  overflow-y: scroll;
+  height: 80vh;
+  overflow-y: auto;
 }
 .orders-row
 {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
 }
 .submit-button
 {
@@ -55,7 +55,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 1%;
+  margin: 20px auto;
 }
 /* 
 .order-label
