--- a/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-patient-data.css
+++ b/youro/src/styles/Doctor-ui/Doctor-appointment/Doctor-patient-data.css
@@ -42,7 +42,6 @@
   margin: 1% 0%;
   font-weight: bold;
   /* height: 4vh; */
-  padding: 1%;
   border-radius: 3px;
   background-color: white;
   transition: background-color 0.3s;
@@ -50,6 +49,8 @@
 
 .p-tabs:hover { 
   background-color: grey;
+  cursor: pointer;
+  color: white;
 }
 .p-data-col
 {
