--- a/youro/src/styles/Patient-ui/Patient-home.css
+++ b/youro/src/styles/Patient-ui/Patient-home.css
@@ -119,28 +119,31 @@ body
 
 .chat-container-main {
   width: 92%;
-  padding: 50px;
-  background-color: white;
-  display: flex;
-   height: 60vh;
+    padding: 15px 50px;
+    background-color: white;
+    display: flex;
+    height: 82vh;
 }
 
 .select-names {
   border-right: 1px solid;
-  width: 30%;
-  height: 68vh;
+  min-width: 30%;
+  /* height: 68vh; */
   overflow: auto;
 }
 
-.select-names div{
-  padding: 20px 50px;
+.select-names > div{
+  padding: 10px 20px;
   border-bottom: 1px solid;
+  border-radius: 10px 0px 0px 10px;
 }
 
 .selected-chat-view {
   display: flex;
   align-items: end;
-  width: 50%;
+  width: -webkit-fill-available !important;
+  width: 80%;
+  flex-direction: column;
 }
 
 .chat-timestamp {
@@ -153,19 +156,27 @@ body
   padding: 5px 10px;
     width: fit-content;
     max-width: 300px;
-    border: 0.5px solid #666;
     border-radius: 5px;
-    margin: 20px 0px;
+    margin: 5px 0px;
+    background-color: var(--secondary-color);
+    color: white;
+}
+
+.chat-time-stamp {
+  position: relative;
+  bottom: -3px;
+  font-size: 12px;
 }
 
 .chat-sent-text {
   padding: 5px 10px;
   width: fit-content;
-  background-color: var(--secondary-color);
-  color: white;
+  border: 0.5px solid #666;
   border-radius: 5px;
   max-width: 300px;
-  margin: 20px 0px 20px auto;
+  margin: 5px 0px 5px auto;
+  position: relative;
+  bottom: -3px;
 }
 
 .selected-chat-view input {
@@ -180,12 +191,17 @@ body
   outline: none;
 }
 
-.selected-chat-view span{
+/* .selected-chat-view span{
   border-radius: 100%;
   background-color: var(--secondary-color);
   cursor: pointer;
   padding: 5px;
   color: white !important;
+} */
+
+.select-names > div {
+  height: fit-content;
+  display: flex;
 }
 
 .select-names-active {
@@ -193,7 +209,7 @@ body
   color: white;
 }
 
-.select-names div:hover {
+.select-names > div:hover {
   background-color: var(--secondary-color);
   color: white;
   cursor: pointer;
