youro header homepage fix
already header size was declared in youro header which is constant in all the other pages and notes size and patient details has tab section added "+"

--- a/youro/src/styles/Doctor-ui/Doctorhomepage.css
+++ b/youro/src/styles/Doctor-ui/Doctorhomepage.css
@@ -22,8 +22,8 @@
  }
 .care-plan-doctor h1
 {
-  color: var(--secondary-color);
-  font-size: 2.5rem;
+  /* color: var(--secondary-color);
+  font-size: 2.5rem; */
   /* padding: 10px; */
 }
 
