--- a/youro/src/styles/Doctor-ui/Doctor-appointment/DA-notes.css
+++ b/youro/src/styles/Doctor-ui/Doctor-appointment/DA-notes.css
@@ -4,6 +4,8 @@
 {
   height: 60vh;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
 }
 
 .notes-date
@@ -11,7 +13,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  padding: 1%;
-  margin: 2% 0%;
+  padding:1%;
+  margin: 1% 0%;
   border-radius: 10px;
 }
