--- a/youro/src/styles/Patient-ui/Patient-Homepage.css
+++ b/youro/src/styles/Patient-ui/Patient-Homepage.css
@@ -34,12 +34,12 @@
    flex-direction: column;
    align-items: flex-start;
  }
-.care-plan h1
+/* .care-plan h1
 {
   color: var(--secondary-color);
   font-size: 2.5rem;
   /* padding: 10px; */
-}
+/* }  */
 
 .all-details
 {
@@ -151,6 +151,8 @@
 .slot-timings:hover {
   cursor: pointer;
   border: 1px solid;
+  background-color: var(--secondary-color);
+  color: white;
   /* box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset; */
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
 }
