--- a/youro/src/styles/Youro-header.css
+++ b/youro/src/styles/Youro-header.css
@@ -75,12 +75,12 @@ h4
   }
 }
 
-.profile-pic{
+/* .profile-pic{
   padding: 0;
   min-width: 30px;
   min-height: 30px;
   object-fit: contain;
-}
+} */
 
 .profle-bubtton-h4{
   margin: 0;
@@ -89,7 +89,7 @@ h4
 
 .userprofile-button {
   /* width: 80%; */
-  margin-top: 1.5%;
+  /* margin-top: 1.5%;
   margin-left: 0.5%;
   max-height: 3vh;
   min-height: 50%;
@@ -97,8 +97,18 @@ h4
   font-size: large;
   font-weight: bold;
   /* border: 1px solid; */
-  border-radius: 5px;
-  cursor: pointer;
+  /* border-radius: 5px;
+  cursor: pointer; */ 
+  
+  /* margin-top: 1.5%;
+  margin-left: 0.5%; */
+  max-height: 7vh;
+  min-height: 50%;
+  background-color: rgb(232 228 215);
+  font-size: large;
+  font-weight: bold;
+  /* border: 1px solid; */
+  /* border-radius: 5px; */
 }
 /* .span
 {
