--- a/youro/src/styles/Doctor-ui/Doctorchat.css
+++ b/youro/src/styles/Doctor-ui/Doctorchat.css
@@ -73,6 +73,14 @@
 	display: none;
 }
 
+.mssg-count-ui {
+	display: inline;
+    background-color: #f90;
+    color: white;
+    padding: 3px 7px;
+    border-radius: 100%;
+}
+
 @keyframes loadSendMessage {
 	0% { opacity: 1; width: 4px; height: 4px; }
 	100% { opacity: 0; width: 100%; height: 100%; }
