--- a/youro/src/styles/Patient-ui/Patient-home.css
+++ b/youro/src/styles/Patient-ui/Patient-home.css
@@ -132,7 +132,7 @@ body
   overflow: auto;
 }
 
-.select-names > div{
+.select-names-div{
   padding: 10px 20px;
   border-bottom: 1px solid;
   border-radius: 10px 0px 0px 10px;
@@ -179,7 +179,7 @@ body
   bottom: -3px;
 }
 
-.selected-chat-view input {
+.text-input-styled {
   padding: 10px;
   border-radius: 10px;
   border: 0.5px solid #666;
@@ -187,7 +187,7 @@ body
   width: 90%;
 }
 
-.selected-chat-view input:focus{
+.text-input-styled:focus{
   outline: none;
 }
 
@@ -199,7 +199,7 @@ body
   color: white !important;
 } */
 
-.select-names > div {
+.select-names-div {
   height: fit-content;
   display: flex;
 }
@@ -209,7 +209,7 @@ body
   color: white;
 }
 
-.select-names > div:hover {
+.select-names-div:hover {
   background-color: var(--secondary-color);
   color: white;
   cursor: pointer;
