notifications list height and scrollable behaviour
a bug

--- a/youro/src/styles/Youro-header.css
+++ b/youro/src/styles/Youro-header.css
@@ -194,6 +194,8 @@ h4
 } */
 .notif-popup-content {
   text-align: start;
+  overflow-y: scroll;
+  height: 55vh
 }
 .notifications-list {
   margin-top: 10px;
