--- a/youro/src/styles/Doctor-ui/Searchbar.css
+++ b/youro/src/styles/Doctor-ui/Searchbar.css
@@ -42,7 +42,7 @@
 {
   /* border: 5px solid red; */
   height: 80vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 100%;
   margin-left: 1%;
   /* margin: 1%; */
