--- a/youro/src/styles/Youro-header.css
+++ b/youro/src/styles/Youro-header.css
@@ -10,6 +10,7 @@ h1
 
 .youro-header
 {
+  margin-bottom: 0px !important;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -53,6 +54,8 @@ h4
 
 .user-name
 {
+  display: flex;
+  align-items: center;
   text-align: center;
   max-width: 50%;
   overflow: hidden;
@@ -60,7 +63,6 @@ h4
   text-overflow: ellipsis;
   white-space: nowrap; 
   /* border: 1px solid black; */
-  height: 3vh;
   /* border: 1px solid black; */
   /* padding: 2%; */
   /* margin-top: 1%; */
@@ -85,6 +87,7 @@ h4
 .profle-bubtton-h4{
   margin: 0;
   padding: 0;
+  margin-right: 20px;
 }
 
 .userprofile-button {
@@ -194,7 +197,7 @@ h4
 } */
 .notif-popup-content {
   text-align: start;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 55vh
 }
 .notifications-list {
