--- a/youro/src/styles/Doctor-ui/doctor-appointment-div.css
+++ b/youro/src/styles/Doctor-ui/doctor-appointment-div.css
@@ -18,7 +18,15 @@
   color: white;
   background-color: var(--secondary-color);
   /* padding: 10px; */
-  border-radius: 20px;
+  /* border-radius: 20px; */
+  /* background-color: gray; */
+  color: white;
+  border-radius: 15px;
+  text-align: center;
+  transition: all .2s ease-out;
+  cursor: pointer;
+  padding: 15px 25px;
+  font-weight: 700;
 }
 
 
