--- a/youro/src/styles/Patient-ui/Patient-Homepage.css
+++ b/youro/src/styles/Patient-ui/Patient-Homepage.css
@@ -222,3 +222,19 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+
+
+.notification-popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5) !important; 
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 5%;
+  z-index: 1000;
+}
