--- a/youro/src/styles/Admin-ui/Admin-Maintainence.css
+++ b/youro/src/styles/Admin-ui/Admin-Maintainence.css
@@ -14,3 +14,26 @@
         box-shadow: inset 1px 1px 15px #7d7d7d;
     }
 }
+
+.add-edit-info-button{
+    color: var(--secondary-color);
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    background: none;
+    padding: 0;
+    margin-left: 25px;
+    text-decoration: underline;
+    font-size: 1rem
+  }
+
+.view-info-button{
+    color: var(--secondary-color);
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    background: none;
+    padding: 0;
+    text-decoration: underline;
+    font-size: 1rem
+  }
