--- a/youro/src/styles/Patient-ui/Patient-home.css
+++ b/youro/src/styles/Patient-ui/Patient-home.css
@@ -76,32 +76,54 @@ body
   height: 70vh;
   overflow: auto;
   border-right: 1px solid;
+  width: 20%;
 }
 
 .educate-column-two {
   height: 80vh;
-  overflow: auto;
-  width: 75%;
+  margin-left: 3%;
+  width: 70%;
 }
 
 .educate-column-one-name {
-  padding: 30px 100px;
-  border-bottom: 1px solid;
-}
-
-.educate-column-one-name:hover {
-  background-color: var(--secondary-color);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 1px solid gray;
+  border-radius: 5px;
   cursor: pointer;
 }
+
+/* .educate-column-one-name:hover {
+  background-color: var(--secondary-color);
+  cursor: pointer;
+} */
 
 .educate-column-one-name-active {
   background-color: var(--secondary-color);
 }
 
+.level-0 {
+  padding-left: 10px;
+  padding-right: 50px;
+}
+
+.level-1 {
+  padding-left: 30px;
+  padding-right: 50px;
+}
+
+.level-2 {
+  padding-left: 78px;
+  padding-right: 50px;
+}
+
 .educate-container-main {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .educate-iframe {
