--- a/youro/src/styles/Doctor-ui/Doctor-Profile.css
+++ b/youro/src/styles/Doctor-ui/Doctor-Profile.css
@@ -18,6 +18,13 @@
    flex-direction: column;
    gap:20px;
 } */
+
+.edit-profile_details
+{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
 .d-container
 {
   display: flex;
@@ -35,10 +42,10 @@
 {
   /* border: 3px solid blue; */
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: start;
-  height: 85vh;
+  justify-content: space-evenly;
+  height: 72vh;
   /* margin-top: 5%; */
   width: 95%;
   margin: 1%;
@@ -49,7 +56,7 @@
 {
   display: flex;
   justify-content: space-between;
-  width: 50%;
+  width: 100%;
   /* margin-bottom: 10px;
    */
 }
@@ -110,11 +117,31 @@
   margin-left: 50%;  */
 }
 
+.profile-header
+{
+  text-align: center;
+}
+
+.patient-profile-pic
+{
+  max-width: 320px;
+  width: 100%;
+  height: auto;
+  clip-path: circle();
+  /* position: absolute; */
+}
+
+/* .my-profile img
+{
+  border-radius: 80%;
+} */
 
 .my-profile
 {
   display: flex;
   flex-direction: column;
+  align-content: center;
+  margin-bottom: 7%
   /* margin-bottom: 0.2%; */
   /* border: 1px solid black; */
 }
