--- a/youro/src/styles/Patient-ui/Patient-home.css
+++ b/youro/src/styles/Patient-ui/Patient-home.css
@@ -93,13 +93,8 @@ body
   padding-bottom: 15px;
   border: 1px solid gray;
   border-radius: 5px;
-  cursor: pointer;
 }
 
-/* .educate-column-one-name:hover {
-  background-color: var(--secondary-color);
-  cursor: pointer;
-} */
 
 .educate-column-one-name-active {
   background-color: var(--secondary-color);
@@ -108,6 +103,7 @@ body
 .level-0 {
   padding-left: 10px;
   padding-right: 50px;
+  cursor: pointer;
 }
 
 .level-1 {
@@ -120,9 +116,15 @@ body
   padding-right: 50px;
 }
 
-.level-3 {
+.level-2-last {
+  padding-left: 70px;
+  padding-right: 50px;
+  cursor: pointer;
+}
+.level-3-last {
   padding-left: 98px;
   padding-right: 50px;
+  cursor: pointer;
 }
 
 .educate-container-main {
